# dernek-erp-backend

./: .dockerignore  .env.example  .gitignore  .sequelizerc  README.md  app.js  docker-compose.yaml  dockerfile  fix_constraint.sql  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js
.github/workflows/: main.yml
app/core/: config.py
app/db/: base.py
config/: config.cjs
migrations/: 20251025105347-init-tables.cjs
src/config/: database.js
src/constants/: errorMessages.js
src/controllers/: activityLog.controller.js  auth.controller.js  budgetPlan.controller.js  campaign.controller.js  dashboard.controller.js  document.controller.js  donation.controller.js  donor.controller.js  event.controller.js  expense.controller.js  finance.controller.js  financialReport.controller.js  fixedAsset.controller.js  group.controller.js  meeting.controller.js  member.controller.js  setting.controller.js  virtualBank.controller.js  whatsapp.controller.js
src/middlewares/: authMiddleware.js  errorHandler.js  upload.middleware.js
src/migrations/: fix_donations_nullable_memberid.sql  seed_general_donation_campaign.sql
src/models/: activityLog.model.js  admin.model.js  budgetPlan.model.js  collection.model.js  debt.model.js  document.model.js  donation.model.js  donationCampaign.model.js  donor.model.js  event.model.js  expense.model.js  externalDebtor.model.js  fixedAsset.model.js  group.model.js  index.js  meeting.model.js  member.model.js  setting.model.js
src/repositories/: member.repository.js
src/routes/: activityLog.routes.js  auth.routes.js  budgetPlan.routes.js  campaign.routes.js  dashboard.routes.js  document.routes.js  donation.routes.js  donor.routes.js  event.routes.js  expense.routes.js  finance.routes.js  financialReport.routes.js  fixedAsset.routes.js  group.routes.js  index.js  meeting.routes.js  member.routes.js  setting.routes.js  virtualBank.routes.js  whatsapp.routes.js
src/seeders/: adminSeeder.js  dataSeeder.js
src/services/: activityLog.service.js  auth.service.js  budgetPlan.service.js  campaign.service.js  dashboard.service.js  document.service.js  donation.service.js  donor.service.js  event.service.js  expense.service.js  finance.service.js  financialReport.service.js  fixedAsset.service.js  group.service.js  meeting.service.js  member.service.js  virtualBank.service.js  whatsapp.service.js
src/utils/: whatsappClient.js
