# pyproject.toml

# ==============================================================================
# [project] Bölümü: Proje Meta Verileri ve Çalışma Bağımlılıkları (Runtime)
# = Bu paketler uygulamanın çalışması için gereklidir (Canlı ortamda kurulur).
# ==============================================================================
[project]
name = "dernek-erp-backend"
version = "0.1.0"
description = "Dernek ERP Backend Servisi"
authors = [
    {name = "TÜ Manifest Grubu"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11" # Python 3.11 veya üzeri şart koşuluyor

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0.0",
    "pydantic-settings",
    "python-dotenv",
    # İleride eklenecekler:
    # "SQLAlchemy", 
    # "psycopg2-binary", # PostgreSQL veritabanı sürücüsü
]


# ==============================================================================
# [tool.setuptools] Bölümü: Paket Oluşturma Ayarları (opsiyonel ama iyi)
# ==============================================================================
[tool.setuptools]
packages = ["app"] # Sadece 'app' klasörünü Python paketi olarak tanı.




